fix flip gap for lg display

--- a/scss/_mq.scss
+++ b/scss/_mq.scss
@@ -33,6 +33,7 @@
     --fs: 75px;
     --flip-shadow: -10px;
     --title-mt: 2rem;
+    --flip-gap: 2.25rem;
   }
 
   .circle-border {
